--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,6 +60,10 @@ a:hover
     transition: 0.5s;
 }
 
+.headin{
+    font-family:Baskervville;
+    font-size: 3.5vw;
+}
 .header-footer
 {
     padding: 0.1%;
@@ -111,7 +115,9 @@ a:hover
 
 h3
 {
-    font-size: 2.5vw;
+    font-size: 3vw;
+    font-family:Baskervville;
+    font-weight: bold;
 }
 
 img
@@ -134,6 +140,10 @@ img
     margin-right: 30%;
     margin-left: 30%;
     text-align: center; 
+    font-family:Baskervville;
+}
+.heading{
+    font-family:Baskervville;
 }
 
 .columns
@@ -205,8 +215,9 @@ h2
 
 .rrf-desc
 {
-    padding-top: 2%;
+    margin-top: 50px;
     font-size: 1.3vw;
+    font-family:Baskervville;
 }
 
 .second-sec
@@ -220,14 +231,14 @@ h2
 {  
     padding:0.5%;
     border-radius: 2%;
-    background-color: blue;
+    background-color: rgb(0, 162, 255);
 }
 
 .footer
 {
     margin-top: 10%;
     height: 25%;
-    background-color: blue;
+    background-color: rgb(0, 162, 255);
 }
 
 p.ft
@@ -235,6 +246,7 @@ p.ft
     color: white;
     text-align: center;
     padding-top: 1%;
+    font-family:Baskervville;
 }
 
 .iconsend
@@ -252,6 +264,9 @@ p.click
 .dp{
     width: 15%;
     height: auto;
+}
+.rrf-btn{
+    margin-top: 60px;
 }
 
 @media (max-width:1000px) {
